Fix fonts on IE

--- a/css/.sass/_constants.sass
+++ b/css/.sass/_constants.sass
@@ -44,22 +44,22 @@ $bold-font: 'Champagne Bold', Helvetica, Arial, sans-serif
 // Custom Fonts
 @font-face
     font-family: 'Matchbook'
-    src: url('./fonts/Matchbook.eot?#iefix') format('embedded-opentype') //IE fix
-    src: url('./fonts/Matchbook.ttf') format('truetype')
+    src: url('./fonts/Matchbook.eot')
+    src: url('./fonts/Matchbook.eot?#iefix') format('embedded-opentype'), url('./fonts/Matchbook.ttf')
     // src: local("Matchbook"), url('./fonts/Matchbook.ttf') format("truetype")
     font-weight: normal
 
 @font-face
     font-family: 'Champagne'
-    src: url('./fonts/Champagne_&_Limousines.eot?#iefix') format('embedded-opentype') //IE fix
-    src: url('./fonts/Champagne_&_Limousines.ttf')
+    src: url('./fonts/Champagne_&_Limousines.eot')
+    src: url('./fonts/Champagne_&_Limousines.eot?#iefix') format('embedded-opentype'), url('./fonts/Champagne_&_Limousines.ttf')
     // src: local("Champagne & Limousines"), url('./fonts/Champagne_&_Limousines.ttf') format("truetype")
     font-weight: normal
 
 @font-face
     font-family: 'Champagne Bold'
-    src: url('./fonts/Champagne_&_Limousines_Bold.eot?#iefix') format('embedded-opentype') //IE fix
-    src: url('./fonts/Champagne_&_Limousines_Bold.ttf')
+    src: url('./fonts/Champagne_&_Limousines_Bold.eot')
+    src: url('./fonts/Champagne_&_Limousines_Bold.eot?#iefix') format('embedded-opentype'), url('./fonts/Champagne_&_Limousines_Bold.ttf')
     // src: local("Champagne & Limousines Bold"), url('./fonts/Champagne_&_Limousines_Bold.ttf') format("truetype")
     font-weight: bold
     font-style: normal
