--- a/css/about.css
+++ b/css/about.css
@@ -1,19 +1,19 @@
 @font-face {
   font-family: "Matchbook";
-  src: url("./fonts/Matchbook.eot?#iefix") format("embedded-opentype");
-  src: url("./fonts/Matchbook.ttf") format("truetype");
+  src: url("./fonts/Matchbook.eot");
+  src: url("./fonts/Matchbook.eot?#iefix") format("embedded-opentype"), url("./fonts/Matchbook.ttf");
   font-weight: normal; }
 
 @font-face {
   font-family: "Champagne";
-  src: url("./fonts/Champagne_&_Limousines.eot?#iefix") format("embedded-opentype");
-  src: url("./fonts/Champagne_&_Limousines.ttf");
+  src: url("./fonts/Champagne_&_Limousines.eot");
+  src: url("./fonts/Champagne_&_Limousines.eot?#iefix") format("embedded-opentype"), url("./fonts/Champagne_&_Limousines.ttf");
   font-weight: normal; }
 
 @font-face {
   font-family: "Champagne Bold";
-  src: url("./fonts/Champagne_&_Limousines_Bold.eot?#iefix") format("embedded-opentype");
-  src: url("./fonts/Champagne_&_Limousines_Bold.ttf");
+  src: url("./fonts/Champagne_&_Limousines_Bold.eot");
+  src: url("./fonts/Champagne_&_Limousines_Bold.eot?#iefix") format("embedded-opentype"), url("./fonts/Champagne_&_Limousines_Bold.ttf");
   font-weight: bold;
   font-style: normal; }
 
